refactoring, prototype cache.